# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-circuitmaintenance"
version = "0.2.2"
description = "Provides the ability to record circuit maintenance, maintenance impact and maintenance notifications in Netbox and link them to Providers and Circuits."
readme = "README.md"
authors = [{ name = "Jason Yates", email = "me@jasonyates.co.uk" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/jasonyates/netbox-circuitmaintenance"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[tool.bumpver]
current_version = "0.2.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
"netbox_circuitmaintenance/__init__.py" = [
    "{version}",
    "{__version__}",
]
